# django-search-example

./: .gitignore  .pre-commit-config.yaml  Full text search with Django and PostgreSQL.odp  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/: dependabot.yml
django_search_example/: asgi.py  settings.py  urls.py  wsgi.py
gutensearch/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
gutensearch/management/commands/: gutenlader.py  makedemo.py
gutensearch/migrations/: 0001_initial.py  0002_document_search_vector_and_more.py  0003_document_config_alter_document_language_code.py
gutensearch/templates/gutensearch/: language_statistics.html  search_query.html  search_result.html
scripts/: reset_local_database.sh  rsync_gutenberg.sh  update_dependencies.sh
tests/: test_django_search_example.py
