[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = [
    "py38",
    "py39",
    "py310",
]
exclude = '''
/(
    \.eggs
  | \.git
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "core,django_search_example,gutensearch,scripts,tests"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-rA"
]
testpaths = [
    "tests",
]

[tool.poetry]
name = "django-search-example"
version = "0.1.0"
description = ""
authors = ["Thomas Aglassinger <roskakori@users.sourceforge.net>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
Django = "^4.2.4"
django-extensions = "^3.1.5"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
rich = "^13.5.2"
django-debug-toolbar = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
docker-compose = "^1.29.2"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
